created index.html title: japanese fusion jazz archive

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My Webpage!</title>
+		<title>Japanese Fusion Jazz Archive</title>
 	</head>
 	<body>
-		Hello, world!
+		<h1>Japanese Fusion Jazz Archive</h1>
+		<h2>A place where you can find all about japanese fusion jazz discography!</h2>
 	</body>
 </html>
