added first album

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 	<head>
 		<title>Japanese Fusion Jazz Archive</title>
-	</head>
-	<body>
 		<h1>Japanese Fusion Jazz Archive</h1>
 		<h2>A place where you can find all about japanese fusion jazz discography!</h2>
+	</head>
+	<body>
+		<div>
+			<div>
+				<img src="images/mintjams.jpg">
+				<h3>Mint Jams</h3>
+				<h3>Casiopea</h3>
+				<h3>1982</h3>
+			</div>
+		</div>
 	</body>
 </html>
